--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
@@ -35,10 +34,10 @@ dependencies {
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'com.google.guava:guava:24.0-android'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:customtabs:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
-    implementation 'com.airbnb.android:lottie:2.5.0-rc1'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:customtabs:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.airbnb.android:lottie:2.5.0'
     implementation 'com.tapadoo.android:alerter:2.0.4'
 
 }
