--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.objectbox' // after applying Android plugin
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "com.sumit.githubrepobrowser"
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -21,23 +22,23 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation('com.github.bumptech.glide:glide:4.6.1'){
         exclude group: "com.android.support"
         transitive = true
     }
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.google.guava:guava:24.0-android'
-    implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support:customtabs:27.1.0'
-    implementation 'com.android.support:cardview-v7:27.1.0'
-    implementation 'com.airbnb.android:lottie:2.5.0'
-    implementation 'com.tapadoo.android:alerter:2.0.4'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:customtabs:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.airbnb.android:lottie:2.5.5'
+    implementation 'com.tapadoo.android:alerter:2.0.6'
 
 }
